Index markup & main sass

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Bulgan Erdenebaatar",
   "license": "MIT",
   "dependencies": {
+    "font-awesome": "^4.7.0",
     "node-sass": "^4.14.1"
   }
 }
